# RNADiffusion

./: .gitignore  README.md  diff_bo.py  generate.ipynb  generate_selfies_latents.py  natalie_notes.md  pyproject.toml  train.py  train_diffusion.py  train_mol_diffusion.py  train_predictor.py  train_vae.py  validate_diffusion.py
data/: diffusion_datamodule.py  guacamol_utils.py  sample_test.tsv  sample_train.tsv  selfies_datamodule.py  selfies_dataset.py  vae_datamodule.py  vocab.json
datamodules/: __init__.py  diffusion_datamodule.py  kmer_datamodule.py  selfies_datamodule.py  selfies_dataset.py  selfies_lolbo_datamodule.py  vae_datamodule.py
lolbo/: __init__.py  log.txt  lolbo.py  objective.py  objective_lolbo.py  objective_v1.py  objective_v2.py  turbo.py  utils.py
lolbo/lolbo/: __init__.py  lolbo.py  turbo.py  utils.py
model/: BaseMolVAE.py  GaussianDiffusion.py  MolVAE.py  RNAVAE.py  RNAVAE2.py  UNet1D.py  __init__.py
testing_scripts/: test_bo_script_v2.py  test_diffusion_clamp.py  test_diffusion_clamp_gaurav.py  test_diffusion_repaint_gaurav.py  test_diffusion_script.py  test_diffusion_v2.py  test_fcd_script.py  test_log_qei_script.py  test_log_qei_v2.py  test_log_qei_v3.py  test_lolbo_script.py  test_lolbo_script_v2.py  test_tr_script.py
training_scripts/: train_cls_predictor.py  train_cls_predictor_v2.py  train_diffusion.py  train_diffusion_v2.py  train_predictor.py  train_vae.py
util_scripts/: descriptors_latent_data_script.py  selfies_latent_data_script.py
utils/: descriptors_latent_data_script.py  guacamol_utils.py  selfies_latent_data_script.py
(+51 files in other folders)
