[project]
name = "diffuse_opt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "botorch>=0.15.1",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "fcd>=1.2.2",
    "fire>=0.7.1",
    "gpytorch>=1.14",
    "guacamol",
    "hnn-utils>=0.3.10",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "lightning>=2.5.4",
    "polars>=1.32.3",
    "rdkit>=2025.3.5",
    "rich>=14.1.0",
    "rotary-embedding-torch>=0.8.9",
    "selfies>=2.2.0",
    "torch>=2.8.0",
    "wandb>=0.21.2",
]

[tool.uv.sources]
torch = { index = "pytorch" }
guacamol = { git = "https://github.com/haydn-jones/guacamol" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "FURB", "ANN001"]
ignore = ["B905", "E501", "SIM108"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
